# MomDiary

./: .gitignore  Deployment.md  README.md
.github/: copilot-instructions.md
backend/: .env.example  README-backend.md  alembic.ini  momdiary.db.bak  momdiary.db.bak-pre-006  out.txt  pyproject.toml  requests.http  requirements.txt  smoke_006.py  smoke_agent.py  test_output.txt  test_results.txt
backend/alembic/: env.py
backend/alembic/versions/: 0002_users_babies.py  0003_clerk_users.py  0003_users_timezone.py  0004_postgres_baseline.py  0004_users_timezone.py  0005_users_timezone.py  0006_baby_profile_fields.py  0007_growth_measurements.py
backend/alembic/versions_legacy_sqlite/: 0001_initial.py
backend/docs/: AGENT_FRAMEWORK_WARNINGS.md  POSTGRES_OPERATIONS.md
backend/eval-reports/: eval-20260526T183855Z.json  eval-20260526T184039Z.json
backend/src/momdiary/: config.py  main.py
backend/src/momdiary/agents/: README.md  brave_search.py  diary_agent copy.py  diary_agent.py  dispatcher.py  intent_router.py  maf_runner.py  pg_session_store.py  research_agent.py  research_policy.py  research_runner.py  session_store.py  session_sweeper.py
backend/src/momdiary/api/: appointments.py  auth.py  babies.py  dependencies.py  entries.py  feeds.py  poops.py  research.py  sleeps.py  users.py  webhooks.py
backend/src/momdiary/auth/: README.md  __init__.py  clerk.py  context.py  dependencies.py  hasher.py  middleware.py  sessions.py  webhooks.py
backend/src/momdiary/babies/: README.md  __init__.py  service.py
backend/src/momdiary/db/: engine.py
backend/src/momdiary/models/: orm.py  schemas.py
backend/src/momdiary/observability/: logging.py  middleware.py
backend/src/momdiary/schemas/: __init__.py  auth.py  babies.py  users.py  webhooks.py
backend/src/momdiary/services/: normalization.py  target_resolver.py  time_service.py
backend/tests/: conftest.py
backend/tests/benchmarks/: test_get_by_date.py  test_session_store_bench.py
backend/tests/contract/: test_agent_tools_log.py  test_agent_tools_update_delete.py  test_entries_session.py  test_openapi.py  test_research_api.py
backend/tests/evals/: README.md  conftest.py  test_tool_routing.py
backend/tests/integration/: test_agent_routing.py  test_ambiguous_inputs.py  test_appointment_notes.py  test_auth_endpoints.py  test_babies_delete_active_fallback.py  test_babies_endpoints.py  test_baby_profile.py  test_entries_scoping.py  test_full_day.py  test_get_by_date.py  test_put_idempotency.py  test_put_update.py  test_research_e2e.py  test_session_continuity.py  test_session_failure_isolation.py  test_session_isolation.py  test_session_retention.py  test_soft_delete.py  test_users_and_active_baby.py
backend/tests/unit/: test_argon2_hasher.py  test_brave_search_client.py  test_intent_router.py  test_log_dedup.py  test_maf_runner_prompt.py  test_normalization.py  test_pg_session_store_backcompat.py  test_pg_session_store_turn_roundtrip.py  test_render_history.py  test_session_service.py  test_session_store.py  test_session_store_partition.py  test_target_resolver.py  test_time_service.py
(+213 files in other folders)
