[project]
name = "momdiary"
version = "0.1.0"
description = "MomDiary Baby Tracker Agentic Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "azure-identity>=1.17",
    "agent-framework==1.0.0rc6",
    "agent-framework-azure-ai==1.0.0rc6",
    "structlog>=24.1",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momdiary"]

# ---------------------------------------------------------------------------
# Ruff: lint + format (Principle I)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "ASYNC", "PL"]
ignore = ["PLR0913"]  # FastAPI dependencies legitimately push past max-args

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy: strict typing on src (Principle I)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/momdiary"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["agent_framework.*", "agent_framework_azure_ai.*"]
ignore_missing_imports = true
follow_imports = "silent"

# ---------------------------------------------------------------------------
# Pytest (Principle II: deterministic, coverage gates)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/momdiary",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmark (Principle III)",
    "quarantine: known-flaky, excluded from coverage gating",
]
filterwarnings = [
    "error",
    # Principle V: suppress only Microsoft Agent Framework prerelease warnings,
    # narrowly scoped to its packages. Document each suppression in
    # docs/AGENT_FRAMEWORK_WARNINGS.md.
    "ignore::DeprecationWarning:agent_framework",
    "ignore::DeprecationWarning:agent_framework_azure_ai",
    "ignore::PendingDeprecationWarning:agent_framework",
    "ignore::PendingDeprecationWarning:agent_framework_azure_ai",
    "ignore::UserWarning:agent_framework",
    "ignore::UserWarning:agent_framework_azure_ai",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
